[package]
name = "nodekit_seq_sdk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nodekit_seq_sdk"
path = "src/main.rs"

[dependencies]
context = "3.0.0"
reqwest = {version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
bytes = "1"
serde_json = "1.0"
http = "0.2"