[package]
name = "nodekit_seq_sdk"
version = "0.1.1"
edition = "2021"
author = ["rikoeldon"]
license = "MIT OR Apache-2.0"
keywords = ["jsonrpc", "seq", "sdk"]
description = "This is a JSON RPC Client for nodekit SEQ without any of the dependencies of AvalancheGo, HyperSDK, or SEQ to ensure compatibility with rollups"
documentation = "https://docs.rs/crate/nodekit_seq_sdk/0.1.0"
repository = "https://github.com/AnomalyFi/rust-seq-rpc"

[[bin]]
name = "nodekit_seq_sdk"
path = "src/main.rs"

[dependencies]
context = "3.0.0"
reqwest = {version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
bytes = "1"
serde_json = "1.0"
http = "0.2"
async-trait = "0.1.74"